<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f5f5f5"
        android:orientation="vertical">


        <com.shenyuan.superapp.base.widget.TitleView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:ps_title="@string/target_school" />

        <LinearLayout
            android:id="@+id/ll_school_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_ffffff"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/title">

            <include layout="@layout/search_school_top" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_ffffff"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/ll_schools_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_schools_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_school_arrow_down"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:text="@string/school_level"
                    android:textColor="@color/color_333333"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_schools_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_school_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_school_arrow_down"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:text="@string/school_location"
                    android:textColor="@color/color_333333"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_schools_sort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_school_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_school_arrow_down"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:text="@string/school_sort"
                    android:textColor="@color/color_333333"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_schools_screen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_school_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_school_arrow_down"
                    android:drawablePadding="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/school_search"
                    android:textColor="@color/color_333333"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <com.shenyuan.superapp.base.widget.MyRefreshLayout
            android:id="@+id/mrl_schools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_schools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:overScrollMode="never" />

        </com.shenyuan.superapp.base.widget.MyRefreshLayout>
    </LinearLayout>
</layout>