<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:gravity="right"
            app:cardBackgroundColor="@color/color_ffffff"
            app:cardCornerRadius="4dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="2dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_school_distribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_school_distribution"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/dis_target_school"
                    android:textColor="@color/color_333333"
                    android:textSize="15sp" />

                <View
                    style="@style/line_d8d8d8"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <TextView
                    android:id="@+id/tv_school_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_school_delete"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/delete_school"
                    android:textColor="@color/color_333333"
                    android:textSize="15sp" />

                <View
                    style="@style/line_d8d8d8"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <TextView
                    android:id="@+id/tv_school_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/ic_school_back"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/back_school"
                    android:textColor="@color/color_333333"
                    android:textSize="15sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>